# pxq

./: .gitignore  README.md  main.py  pyproject.toml
.github/: RELEASE.md
.github/workflows/: publish.yml
.hive/: issues.jsonl
.tmp/: design.md  task.md
context/: requirements.md
docs/: GPUs.md  cli-reference.md  cli-reference_ja.md
examples/local/: README.md  job1_sleep_hello.py  job2_sleep_hello.py  run_two_jobs.sh
examples/runpod/: README.md  dataset_download.sh  train_model.py  train_on_cuda.sh
examples/runpod/config/: dataset-download.yaml  (+1 more)
src/pxq/: __init__.py  __main__.py  cli.py  client.py  config.py  config_loader.py  executor.py  log_collector.py  models.py  recovery.py  scheduler.py  server.py  server_pid.py  storage.py
tests/: __init__.py  conftest.py
tests/cli/: test_add_ls_status.py  test_cancel_stop.py  test_cli_base.py  test_config_dir_flags.py  test_server_diagnostics.py  test_server_start.py  test_ssh_command.py
tests/dashboard/: test_dashboard_ui.py  test_polling_stability.py
tests/fixtures/: config-mount-path.yaml  config-volume-path.yaml
tests/integration/: test_jobs_api.py  test_log_collection.py  test_managed_lifecycle.py  test_managed_stop.py  test_nonmanaged_runtime_regression.py  test_parallelism.py  test_provisioning_timeout.py  test_recovery.py  test_release_gate.py  test_stderr_verification.py  test_stop_regressions.py
tests/providers/: test_runpod_exec.py  test_runpod_provider.py  test_runpod_ssh.py
tests/unit/: test_config.py  test_executor.py  test_pxqignore.py  test_runpod_client.py  test_runpod_gpu_types.py  test_sanity.py  test_server.py  test_server_pid.py  test_state_machine.py
(+19 files in other folders)
